# MCP-Powered-Data-Science-Assistant

./: .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/: churn_sample.csv
docs/: architecture.md
examples/: demo_queries.md
src/mcp_data_science_assistant/: __init__.py  __main__.py  chat_client.py  runtime.py  server.py
tests/: test_smoke.py
